--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </style>
     <script>
         async function fetchMessages() {
-            const response = await fetch('https://api.github.com/repos/YOUR_GITHUB_USERNAME/YOUR_REPOSITORY/issues');
+            const response = await fetch('https://api.github.com/repos/Dihuwwy/personalpages/issues');
             const issues = await response.json();
             const messageList = document.getElementById("messages");
             messageList.innerHTML = '';
@@ -90,10 +90,10 @@
             const name = document.getElementById("name").value;
             const message = document.getElementById("message").value;
 
-            await fetch('https://api.github.com/repos/YOUR_GITHUB_USERNAME/YOUR_REPOSITORY/issues', {
+            await fetch('https://api.github.com/repos/Dihuwwy/personalpages/issues', {
                 method: 'POST',
                 headers: {
-                    'Authorization': 'token YOUR_GITHUB_TOKEN',
+                    'Authorization': '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',
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({ title: message, body: `留言者: ${name}` })
