--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             await fetch('https://api.github.com/repos/Dihuwwy/personalpages/issues', {
                 method: 'POST',
                 headers: {
-                    'Authorization': 'token YOUR_GITHUB_TOKEN',
+                    'Authorization': 'token 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',
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({ title: message, body: `留言者: ${name}` })
