--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </form>
         <ul id="messages"></ul>
     </div>
-    <script>
+   <script>
         const token = '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';
 
         document.getElementById("messageForm").addEventListener("submit", async function(event) {
@@ -132,45 +132,55 @@
             const name = document.getElementById("name").value;
             const message = document.getElementById("message").value;
 
-            const response = await fetch('https://api.github.com/repos/Dihuwwy/personalpages/issues', {
-                method: 'POST',
-                headers: {
-                    'Authorization': `token ${token}`,
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    title: message,
-                    body: `留言者: ${name}`,
-                    labels: ['message']
-                })
-            });
+            try {
+                const response = await fetch('https://api.github.com/repos/Dihuwwy/personalpages/issues', {
+                    method: 'POST',
+                    headers: {
+                        'Authorization': `token ${token}`,
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        title: message,
+                        body: `留言者: ${name}`,
+                        labels: ['message']
+                    })
+                });
 
-            if (response.ok) {
-                document.getElementById("name").value = '';
-                document.getElementById("message").value = '';
+                if (response.ok) {
+                    document.getElementById("name").value = '';
+                    document.getElementById("message").value = '';
 
-                loadMessages();
-            } else {
-                console.error('留言提交失败', await response.text());
+                    loadMessages();
+                } else {
+                    const errorResponse = await response.json();
+                    console.error('留言提交失败', errorResponse);
+                }
+            } catch (error) {
+                console.error('网络错误', error);
             }
         });
 
         async function loadMessages() {
-            const response = await fetch('https://api.github.com/repos/Dihuwwy/personalpages/issues');
-            const issues = await response.json();
-            const messageList = document.getElementById("messages");
-            messageList.innerHTML = '';
+            try {
+                const response = await fetch('https://api.github.com/repos/Dihuwwy/personalpages/issues');
+                const issues = await response.json();
+                const messageList = document.getElementById("messages");
+                messageList.innerHTML = '';
 
-            issues.forEach(issue => {
-                if(issue.labels.some(label => label.name === 'message')) {
-                    const li = document.createElement("li");
-                    li.className = "message";
-                    li.textContent = `${issue.user.login}: ${issue.title}`;
-                    messageList.appendChild(li);
-                }
-            });
+                issues.forEach(issue => {
+                    if (issue.labels.some(label => label.name === 'message')) {
+                        const li = document.createElement("li");
+                        li.className = "message";
+                        li.textContent = `${issue.user.login}: ${issue.title}`;
+                        messageList.appendChild(li);
+                    }
+                });
+            } catch (error) {
+                console.error('加载留言失败', error);
+            }
         }
+
         window.onload = loadMessages;
-    </script>
+   </script>
 </body>
 </html>
