--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             await fetch('https://api.github.com/repos/Dihuwwy/personalpages/dispatches', {
                 method: 'POST',
                 headers: {
-                    'Authorization': 'token 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',
+                    'Authorization': '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',
                     'Accept': 'application/vnd.github.everest-preview+json',
                     'Content-Type': 'application/json'
                 },
