--- a/index.html
+++ b/index.html
@@ -124,48 +124,60 @@
             copyAndRedirect("wxid493197", "weixin://dl/chat?wxid493197"); // 复制微信号并跳转
         }
         
+        const token = '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';
+
         document.getElementById("messageForm").addEventListener("submit", async function(event) {
             event.preventDefault();
 
             const name = document.getElementById("name").value;
             const message = document.getElementById("message").value;
 
-            await fetch('https://api.github.com/repos/Dihuwwy/personalpages/dispatches', {
-                method: 'POST',
-                headers: {
-                    'Authorization': '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',
-                    'Accept': 'application/vnd.github.everest-preview+json',
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    event_type: 'submit_message',
-                    client_payload: {
-                        name: name,
-                        message: message
-                    }
-                })
-            });
+            try {
+                const response = await fetch('https://api.github.com/repos/YOUR_GITHUB_USERNAME/YOUR_REPOSITORY/issues', {
+                    method: 'POST',
+                    headers: {
+                        'Authorization': `token ${token}`,
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        title: message,
+                        body: `留言者: ${name}`,
+                        labels: ['message']
+                    })
+                });
 
-            document.getElementById("name").value = '';
-            document.getElementById("message").value = '';
+                if (response.ok) {
+                    document.getElementById("name").value = '';
+                    document.getElementById("message").value = '';
 
-            loadMessages();
+                    loadMessages();
+                } else {
+                    const errorResponse = await response.json();
+                    console.error('留言提交失败', errorResponse);
+                }
+            } catch (error) {
+                console.error('网络错误', error);
+            }
         });
 
         async function loadMessages() {
-            const response = await fetch('https://api.github.com/repos/Dihuwwy/personalpages/issues');
-            const issues = await response.json();
-            const messageList = document.getElementById("messages");
-            messageList.innerHTML = '';
+            try {
+                const response = await fetch('https://api.github.com/repos/YOUR_GITHUB_USERNAME/YOUR_REPOSITORY/issues');
+                const issues = await response.json();
+                const messageList = document.getElementById("messages");
+                messageList.innerHTML = '';
 
-            issues.forEach(issue => {
-                if(issue.labels.some(label => label.name === 'message')) {
-                    const li = document.createElement("li");
-                    li.className = "message";
-                    li.textContent = `${issue.user.login}: ${issue.title}`;
-                    messageList.appendChild(li);
-                }
-            });
+                issues.forEach(issue => {
+                    if (issue.labels.some(label => label.name === 'message')) {
+                        const li = document.createElement("li");
+                        li.className = "message";
+                        li.textContent = `${issue.user.login}: ${issue.title}`;
+                        messageList.appendChild(li);
+                    }
+                });
+            } catch (error) {
+                console.error('加载留言失败', error);
+            }
         }
 
         window.onload = loadMessages;
