--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
     </div>
     <div class="container message-board">
         <h2>留言板</h2>
-        <form id="messageForm">
+        <form id="messageForm" action="https://formspree.io/f/mzzbbdky" method="POST">
             <label for="name">姓名:</label>
-            <input type="text" id="name" required>
+            <input type="text" id="name" name="name" required>
             <br><br>
             <label for="message">留言:</label>
-            <textarea id="message" required></textarea>
+            <textarea id="message" name="message" required></textarea>
             <br><br>
             <button type="submit">提交</button>
         </form>
@@ -99,6 +99,44 @@
     </div>
 
     <script>
+        document.getElementById("messageForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+
+            const name = document.getElementById("name").value;
+            const message = document.getElementById("message").value;
+
+            const formData = new FormData();
+            formData.append('name', name);
+            formData.append('message', message);
+
+            fetch(event.target.action, {
+                method: event.target.method,
+                body: formData,
+                headers: {
+                    'Accept': 'application/json'
+                }
+            }).then(response => {
+                if (response.ok) {
+                    document.getElementById("name").value = '';
+                    document.getElementById("message").value = '';
+                    displayMessage(name, message);
+                } else {
+                    response.json().then(data => {
+                        console.error('留言提交失败', data);
+                    });
+                }
+            }).catch(error => {
+                console.error('网络错误', error);
+            });
+        });
+
+        function displayMessage(name, message) {
+            const messageList = document.getElementById("messages");
+            const li = document.createElement("li");
+            li.className = "message";
+            li.textContent = `${name}: ${message}`;
+            messageList.appendChild(li);
+        }
         function copyToClipboard(text) {
             var tempInput = document.createElement("input");
             tempInput.style.position = "absolute";
@@ -124,63 +162,6 @@
             copyAndRedirect("wxid493197", "weixin://dl/chat?wxid493197"); // 复制微信号并跳转
         }
         
-        const token = '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';
-
-        document.getElementById("messageForm").addEventListener("submit", async function(event) {
-            event.preventDefault();
-
-            const name = document.getElementById("name").value;
-            const message = document.getElementById("message").value;
-
-            try {
-                const response = await fetch('https://api.github.com/repos/YOUR_GITHUB_USERNAME/YOUR_REPOSITORY/issues', {
-                    method: 'POST',
-                    headers: {
-                        'Authorization': `token ${token}`,
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({
-                        title: message,
-                        body: `留言者: ${name}`,
-                        labels: ['message']
-                    })
-                });
-
-                if (response.ok) {
-                    document.getElementById("name").value = '';
-                    document.getElementById("message").value = '';
-
-                    loadMessages();
-                } else {
-                    const errorResponse = await response.json();
-                    console.error('留言提交失败', errorResponse);
-                }
-            } catch (error) {
-                console.error('网络错误', error);
-            }
-        });
-
-        async function loadMessages() {
-            try {
-                const response = await fetch('https://api.github.com/repos/YOUR_GITHUB_USERNAME/YOUR_REPOSITORY/issues');
-                const issues = await response.json();
-                const messageList = document.getElementById("messages");
-                messageList.innerHTML = '';
-
-                issues.forEach(issue => {
-                    if (issue.labels.some(label => label.name === 'message')) {
-                        const li = document.createElement("li");
-                        li.className = "message";
-                        li.textContent = `${issue.user.login}: ${issue.title}`;
-                        messageList.appendChild(li);
-                    }
-                });
-            } catch (error) {
-                console.error('加载留言失败', error);
-            }
-        }
-
-        window.onload = loadMessages;
     </script>
 </body>
 </html>
