--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         }
 
         function copyQQ() {
-            copyAndRedirect("2444657272", "tencent://message/?uin=2444657272"); // 复制QQ号并跳转
+            copyAndRedirect("2444657272", "mqq://message/?uin=2444657272"); // 复制QQ号并跳转
         }
 
         function copyWeChat() {
