--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         }
 
         function copyQQ() {
-            copyAndRedirect("2444657272", "mqqapi://card/show_pslcard?src_type=internal&version=1&uin=2444657272"); // 复制QQ号并跳转
+            copyAndRedirect("2444657272", "mqq://card/show_pslcard?src_type=internal&source=sharecard&version=1&uin=2444657272"); // 复制QQ号并跳转
         }
 
         function copyWeChat() {
