--- a/index.html
+++ b/index.html
@@ -99,42 +99,53 @@
     </div>
 
     <script>
-        document.getElementById("messageForm").addEventListener("submit", function(event) {
+        const token = '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';
+
+        document.getElementById("messageForm").addEventListener("submit", async function(event) {
             event.preventDefault();
 
             const name = document.getElementById("name").value;
             const message = document.getElementById("message").value;
 
-            const formData = new FormData(event.target);
-
-            fetch(event.target.action, {
-                method: event.target.method,
-                body: formData,
+            await fetch('https://api.github.com/repos/Dihuwwy/personalpages/dispatches', {
+                method: 'POST',
                 headers: {
-                    'Accept': 'application/json'
-                }
-            }).then(response => {
-                if (response.ok) {
-                    document.getElementById("name").value = '';
-                    document.getElementById("message").value = '';
-                    displayMessage(name, message);
-                } else {
-                    response.json().then(data => {
-                        console.error('留言提交失败', data);
-                    });
-                }
-            }).catch(error => {
-                console.error('网络错误', error);
+                    'Authorization': `token ${token}`,
+                    'Accept': 'application/vnd.github.everest-preview+json',
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    event_type: 'submit_message',
+                    client_payload: {
+                        name: name,
+                        message: message
+                    }
+                })
             });
+
+            document.getElementById("name").value = '';
+            document.getElementById("message").value = '';
+
+            loadMessages();
         });
 
-        function displayMessage(name, message) {
+        async function loadMessages() {
+            const response = await fetch('https://api.github.com/repos/Dihuwwy/personalpages/issues');
+            const issues = await response.json();
             const messageList = document.getElementById("messages");
-            const li = document.createElement("li");
-            li.className = "message";
-            li.textContent = `${name}: ${message}`;
-            messageList.appendChild(li);
+            messageList.innerHTML = '';
+
+            issues.forEach(issue => {
+                if(issue.labels.some(label => label.name === 'message')) {
+                    const li = document.createElement("li");
+                    li.className = "message";
+                    li.textContent = `${issue.user.login}: ${issue.title}`;
+                    messageList.appendChild(li);
+                }
+            });
         }
+
+        window.onload = loadMessages;
         
         function copyToClipboard(text) {
             var tempInput = document.createElement("input");
