--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
 
     <script>
-        const token = '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';
+        const token = '';
 
         document.getElementById("messageForm").addEventListener("submit", async function(event) {
             event.preventDefault();
