--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
     </div>
     <div class="container message-board">
         <h2>留言板</h2>
-        <form id="messageForm" action="https://formspree.io/f/mzzbbdky" method="POST">
+        <form id="messageForm">
             <label for="name">姓名:</label>
-            <input type="text" id="name" name="name" required>
+            <input type="text" id="name" required>
             <br><br>
             <label for="message">留言:</label>
-            <textarea id="message" name="message" required></textarea>
+            <textarea id="message" required></textarea>
             <br><br>
             <button type="submit">提交</button>
         </form>
@@ -105,7 +105,7 @@
             const name = document.getElementById("name").value;
             const message = document.getElementById("message").value;
 
-            await fetch('https://api.github.com/repos/YOUR_GITHUB_USERNAME/YOUR_REPOSITORY/dispatches', {
+            await fetch('https://api.github.com/repos/Dihuwwy/personalpages/dispatches', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -126,7 +126,7 @@
         });
 
         async function loadMessages() {
-            const response = await fetch('https://api.github.com/repos/YOUR_GITHUB_USERNAME/YOUR_REPOSITORY/issues');
+            const response = await fetch('https://api.github.com/repos/Dihuwwy/personalpages/issues');
             const issues = await response.json();
             const messageList = document.getElementById("messages");
             messageList.innerHTML = '';
