--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
     </div>
     <div class="container message-board">
-        <h2>留言板</h2>
+        <h2>留言板——你说的话我能在后台看到</h2>
         <form id="messageForm">
             <label for="name">姓名:</label>
             <input type="text" id="name" required>
